syntax = "proto3";

option java_package = "com.stepmate.data";

message CurrentAuthPreferences {
  string accessToken = 1;
  string refreshToken = 2;
}
