syntax = "proto3";

option java_package = "com.stepmate.data";

message BodyDataPreferences {
  int32 age = 1;
  int32 height = 2;
  int32 weight = 3;
}