syntax = "proto3";

option java_package = "com.stepmate.data";

message SettingsPreferences {
  int32 stepGoal = 1;
  int64 todayStep = 2;
}